# gsmbase

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_unused  README.md  cmake_install.cmake  gpio.cpp  gpio.h  main.cpp  startup_samd10.c  syscalls.c  systick.c
src/: main.cpp  startup_samd10.c
src/GSM/: GSM.cpp  GSM.h
src/RF24/: RF24.cpp  RF24.h  RF24_config.h
src/nRF24/: nRF24.cpp.unused  nRF24.h.unused
src/peripherals/: flash.h  gpio.h  spi.cpp  spi.h  systick.c  systick.h  uart.cpp  uart.h
src/sensornet/: sensornet.cpp  sensornet.h  sensors.h
src/utils/: Str.h  vector.h
